.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glusrcmp__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glusrcmp</customHelpPage>
    <description>glusrcmp__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glusrcmp_glusr__r.rstkf__externalid__c+&apos;_&apos;+ rstkf__glusrcmp_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glusrcmp_glusr__r.rstkf__glusr_syusr__r.Name + &quot;(&quot; + rstkf__glusrcmp_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glusrcmp_addvendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this User can add a Vendor directly from within a Payable Session.  Note:  &apos;Allow Add of SF Acct from RS Cust &amp; Vend&apos; field on System Defaults (SYDEFAULT) must be checked as well, so Vendor is added as a SF Account.</inlineHelpText>
        <label>Allow User to Add a Vendor from AP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glusrcmp_crsuper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Receipts Supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glusrcmp_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The User&apos;s Financial Company for reporting purposes</inlineHelpText>
        <label>Reporting Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Financial  System User Companys</relationshipLabel>
        <relationshipName>glusrcmps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glusrcmp_glusr__c</fullName>
        <inlineHelpText>The Financial System User for which this record pertains</inlineHelpText>
        <label>Financial System User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>Financial  System User Companys</relationshipLabel>
        <relationshipName>glusrcmps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glusrcmp_respapind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this User will be assigned Vendors to manage in AP, this flag must be checked in order to be available as the Responsible AP User for a given Vendor, which then drives other AP processes where data can be filtered by Responsible AP User.</inlineHelpText>
        <label>Responsible AP Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial  System User Company</label>
    <listViews>
        <fullName>rstkf__RS_Financial_System_User_Companies</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glusrcmp_glcmp__c</columns>
        <columns>rstkf__glusrcmp_glusr__c</columns>
        <columns>rstkf__glusrcmp_respapind__c</columns>
        <columns>rstkf__glusrcmp_addvendor__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial System User Companies</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial  System User Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__companyisnotmodifiable</fullName>
        <active>true</active>
        <description>Finanical System Company is not modifiable</description>
        <errorConditionFormula>(!ISNEW() &amp;&amp; ISCHANGED(rstkf__glusrcmp_glcmp__c))</errorConditionFormula>
        <errorMessage>Finanical System Company is not modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__financialcompisreqd</fullName>
        <active>true</active>
        <description>Financial Company is required</description>
        <errorConditionFormula>ISBLANK( rstkf__glusrcmp_glcmp__c ) ||  ISNULL( rstkf__glusrcmp_glcmp__c )</errorConditionFormula>
        <errorMessage>Financial Company is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__finsystemuserisnotmodifiable</fullName>
        <active>true</active>
        <description>Financial System User is not modifiable</description>
        <errorConditionFormula>( !ISNEW()  &amp;&amp;  ISCHANGED( rstkf__glusrcmp_glusr__c ) )</errorConditionFormula>
        <errorMessage>Financial System User is not modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__finsystemuserisrequired</fullName>
        <active>true</active>
        <description>Financial System User is required</description>
        <errorConditionFormula>ISBLANK( rstkf__glusrcmp_glusr__c ) ||  ISNULL( rstkf__glusrcmp_glusr__c )</errorConditionFormula>
        <errorMessage>Financial System User is required</errorMessage>
    </validationRules>
</CustomObject>